# picky

./: .editorconfig  .gitignore  COSMOS_SCHEMA.md  LICENSE  MODERNIZATION.md  README.md  activate.bat  activate.sh  app.js  app.py  config.py  cosmos_data_layer.py  data_layer.py  data_migration.py  development_workflow.md  env.example  index.html  pyproject.toml  requirements-lock.txt  requirements.txt  reset_cosmos.py  run-dev.sh  run.py  schema_migration.py  styles.css  test-cosmos.py  test_cosmos_connection.py  test_crud_operations.py
.cursor/plan/: larder-meals-implementation-plan.md
.cursor/plans/: cosmos-connection.plan.md  docs-sync-and-larder-consolidation-complete.md  env-alignment-and-reset-script-modernization-complete.md  larder-meals-implementation-plan.md  remove-local-files-layer-37803fcc.plan.md
.github/: copilot-instructions.md
.github/workflows/: copilot-auto-review.yml  deploy-prod.yml  deploy-stage.yml  (+3 more)
backend/: __init__.py  app.py  config.py  cosmos_data_layer.py  data_layer.py  database_service.py  run.py  secrets_service.py
docs/: COSMOS_SCHEMA.md  SECURITY_FIX_NOTES.md  architecture.md  development_workflow.md
frontend/: app.js  index.html  styles.css
frontend-react/: index.html  vite.config.js
scripts/: data_migration.py  reset_cosmos.py  schema_migration.py
static/: app.js  styles.css
tests/: __init__.py  run_all_tests.py  test-cosmos.py  test_api_endpoints.py  test_cosmos_connection.py  test_crud_operations.py  test_data_layer_crud.py  test_database_service.py  test_health_endpoint.py  test_secrets_service.py
(+6 files in other folders)
